# odds_converter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: odds_benchmarks.rs
examples/: basic_usage.rs  library_integration.rs  odds_calculator.rs  sports_betting.rs
proptest-regressions/: lib.txt
src/: conversions.rs  display.rs  error.rs  lib.rs  types.rs  validation.rs
tests/: integration_tests.rs
